@@ -17,7 +17,9 @@
   * Updated the CompuMate keyboard handler to recognize more keys on an
     actual keyboard, instead of having to remember the weird combinations
     used on the original CompuMate keyboard (although those original keys
-    will continue to work).
+    will continue to work).  Related to this, fixed bug whereby
+    'ghost keys' would be detected by the CompuMate, particularly after
+    pressing 'Enter' to start a game from the ROM launcher.
 
   * Added emulation for MindLink controller using the mouse; the 'Bionic
     Breakthrough' and 'Telepathy' ROMs now work.
